Fixes submit button spacing

--- a/src/styles/FilterContainer.module.css
+++ b/src/styles/FilterContainer.module.css
@@ -8,7 +8,8 @@
   display: flex;
   align-items: center;
   border: 1px rgb(204, 204, 204) solid;
-  height: 2.375em;
+  /* height: 2.375em; */
+  height: 2.5em;
   border-radius: 4px;
   width: 100%;
   gap: 1em;
@@ -18,7 +19,7 @@
   font-size: 1em;
   padding: 0;
   background-color: rgba(233, 232, 232, 0.434);
-  margin-top: 0.5em;
+  margin-top: 1.21875em;
 }
 
 #textContainer {
